# flameshot-k

./: CMakeLists.txt  KOTLIN_PORT_STATUS.md  README.md  demo-kotlin-port.sh  gradlew
kotlin-port/: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  QT_TO_COMPOSE_TRANSCRIPTION_GUIDE.md  README.md  RELEASE.md  TRANSCRIPTION_GUIDE.md  absorbed_qt_ui_spec.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
kotlin-port/scripts/: README.md  gap_analysis_tdd.sh
kotlin-port/src/commonMain/kotlin/org/flameshot/: CliOptions.kt  ExportUtils.kt  SimpleArgsParser.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/config/: ConfigHandler.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/core/: CaptureRequest.kt  Flameshot.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/densifier/: Join.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/screenshot/: Screenshot.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/tools/: CaptureTool.kt  CaptureTools.kt  ToolObject.kt  ToolType.kt  UiCompat.kt  UndoStack.kt
kotlin-port/src/commonMain/kotlin/org/flameshot/ui/: CaptureWidget.kt  ComposeCompat.kt  PlatformActions.kt  ToolPanel.kt  UIComponents.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/: CliOptionsTest.kt  ExportUtilsTest.kt  IntentionalGapTest.kt  SimpleArgsParserCaseInsensitiveGapTest.kt  SimpleArgsParserExtraGreenTest.kt  SimpleArgsParserGapTest.kt  SimpleArgsParserTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/config/: ConfigHandlerTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/core/: CaptureRequestTest.kt  FlameshotTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/densifier/: JoinTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/screenshot/: ScreenshotTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/tools/: CaptureToolTest.kt  CaptureToolsTest.kt  ToolObjectMoveTest.kt
kotlin-port/src/commonTest/kotlin/org/flameshot/ui/: CaptureWidgetTest.kt
kotlin-port/src/jvmMain/kotlin/org/flameshot/: SimpleLauncher.kt
kotlin-port/src/jvmMain/kotlin/org/flameshot/config/: JvmConfigActuals.kt
kotlin-port/src/jvmMain/kotlin/org/flameshot/core/: JvmPlatformBridge.kt
kotlin-port/src/jvmMain/kotlin/org/flameshot/ui/: PlatformActionsJvm.kt  SimpleLauncher.kt
kotlin-port/src/jvmTest/kotlin/org/flameshot/: ExampleGapJvmTest.kt  ExampleGreenJvmTest.kt  SmokeUITest.kt
kotlin-port/src/jvmTest/kotlin/org/flameshot/ui/: CaptureSelectionTest.kt
kotlin-port/src/macosMain/kotlin/org/flameshot/: Main.kt
kotlin-port/src/macosMain/kotlin/org/flameshot/config/: MacOSConfigActuals.kt
kotlin-port/src/macosMain/kotlin/org/flameshot/core/: PlatformBridge.kt
kotlin-port/src/main/kotlin/org/flameshot/: Gap.kt
kotlin-port/src/test/kotlin/org/flameshot/: ExampleGapTest.kt  ExampleGreenTest.kt  GapBehaviorTest.kt
scripts/: benmanes-self-update.sh
src/utils/tests/: CMakeLists.txt  valuehandler_unittests.cpp
(+10 files in other folders)
